src/test/deca/syntax/valid/synt/include_files.deca
#include "open_brace.decah"
#include "println_close_brace.decah"
